# fastapi-exceptions

./: .gitignore  README.md  setup.cfg
fastapi_exceptions/: __init__.py  exceptions.py
