[metadata]
name = fastapi-exceptions
version = attr: fastapi_exceptions.__version__
url = https://github.com/Kholodnyi/fastapi-exceptions
author = Yurii Kholodnyi
author_email = yurii.kholodnyi@gmail.com
description = Common exceptions for FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT
project_urls =
    Bug Tracker = https://github.com/Kholodnyi/fastapi-exceptions/issues
classifiers =
    Programming Language :: Python :: 3
    Environment :: Web Environment
    Framework :: FastAPI
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
